--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -31,7 +31,7 @@ pydantic-settings==2.1.0
 
 # Real-time
 websockets==12.0
-socketio==5.10.0
+python-socketio==5.10.0
 
 # Development
 pytest==7.4.3
