--- a/env.example
+++ b/env.example
@@ -1,19 +1,33 @@
 # Database Configuration
-DATABASE_URL=sqlite:///./financebro.db
+DATABASE_URL=postgresql://user:password@localhost/financebro
 REDIS_URL=redis://localhost:6379
 
-# API Keys (Get these from the respective services)
+# API Keys
 ALPHA_VANTAGE_API_KEY=your_alpha_vantage_key_here
 YAHOO_FINANCE_API_KEY=your_yahoo_finance_key_here
 
 # ML Model Configuration
 MODEL_PATH=./models/
-SEQUENCE_LENGTH=30
-TARGET_DAYS=[1, 3, 5]
+MODEL_VERSION=1.0.0
+
+# Frontend Configuration
+REACT_APP_API_URL=http://localhost:8000/api/v1
+REACT_APP_WS_URL=ws://localhost:8000/ws
 
 # Development Settings
 DEBUG=True
 LOG_LEVEL=INFO
 
-# Frontend Configuration
-REACT_APP_API_URL=http://localhost:8000 
+# Security
+SECRET_KEY=your_secret_key_here
+JWT_SECRET=your_jwt_secret_here
+
+# Email Configuration (for alerts)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your_email@gmail.com
+SMTP_PASSWORD=your_app_password
+
+# Celery Configuration
+CELERY_BROKER_URL=redis://localhost:6379/0
+CELERY_RESULT_BACKEND=redis://localhost:6379/0 
