--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -23,11 +23,21 @@ ta==0.10.2  # Technical Analysis
 yfinance==0.2.28
 alpha-vantage==2.3.1
 
+# Hugging Face & AI Models
+transformers==4.36.2
+tokenizers==0.15.0
+sentence-transformers==2.2.2
+datasets==2.16.1
+accelerate==0.25.0
+diffusers==0.24.0
+
 # Data Processing
 requests==2.31.0
 python-dotenv==1.0.0
 pydantic==2.5.0
 pydantic-settings==2.1.0
+beautifulsoup4==4.12.2
+lxml==4.9.3
 
 # Real-time
 websockets==12.0
