implement deepseek agent

--- a/env.example
+++ b/env.example
@@ -5,6 +5,7 @@ REDIS_URL=redis://localhost:6379
 # API Keys
 ALPHA_VANTAGE_API_KEY=your_alpha_vantage_key_here
 YAHOO_FINANCE_API_KEY=your_yahoo_finance_key_here
+DEEPSEEK_API_KEY=your_deepseek_api_key_here
 
 # ML Model Configuration
 MODEL_PATH=./models/
