--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,8 +15,8 @@ flower==2.0.1
 
 # Machine Learning
 scikit-learn==1.3.2
-pandas==2.1.4
-numpy==1.25.2
+numpy==1.24.3
+pandas==2.0.3
 torch==2.1.1
 xgboost==2.0.2
 ta==0.10.2  # Technical Analysis
@@ -42,7 +42,8 @@ lxml==4.9.3
 # Real-time
 websockets==12.0
 python-socketio==5.10.0
-openai==1.3.0
+httpx==0.25.2
+openai==1.6.1
 
 # Development
 pytest==7.4.3
